--- a/index.css
+++ b/index.css
@@ -19,12 +19,12 @@ height: 425px;
 background-color: #31ea78;
 }
 #myphoto{
-width:50%;
-height: 50%;
+width: 250px;
+height: 150px;
 }
 #imageplace{
-width: 50%;
-height: 50%;
+width: 250px;
+height: 150px;
 }
 #page{
 width: 80%;
